# PyCubaX

./: .gitignore  CHANGELOG.md  README.md  make_sharedlib.sh  makefile.in  pyproject.toml  setup.py
.github/workflows/: cd.yml  ci.yml
demo/: demo-c.c
patches/src/common/: stddecl.h  stddecl.h.patch
src/pycuba/: __init__.py
